[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name="pyUAMMD"
version="1.1.1"
authors = [
    {name = "Pablo Ibáñez-Freire", email = "p.ibanez.fre@gmail.com"},
]
description = "UAMMD python"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "GPL-3.0"}
classifiers = [
        "Development Status :: 3 - Alpha",
        "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.6",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
]
dependencies = [
    "deepdiff","jsbeautifier","JFIO"
]

[options]
include_package_data = true
