[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pyUAMMD*"]

[project]
name="pyUAMMD"
version="1.2.0"
authors = [
    {name = "Pablo Ibáñez-Freire", email = "p.ibanez.fre@gmail.com"},
]
description = "UAMMD-structured python wrapper"
readme = "README.md"
requires-python = ">=3.7"
license =  "GPL-3.0"
classifiers = [
        "Development Status :: 3 - Alpha",
        "Programming Language :: Python :: 3",
]
dependencies = [
    "deepdiff","jsbeautifier","JFIO"
]

[options]
include_package_data = true
